@@ -83,13 +83,10 @@ Keep compatibility with experimental implementation
  	err = __file_exec (file, task, flags,
  			   args, argslen, env, envlen,
  			   dtable, MACH_MSG_TYPE_COPY_SEND, dtablesize,
-@@ -436,3 +459,12 @@
+@@ -436,3 +459,9 @@
    return err;
  }
  libc_hidden_def (_hurd_exec_paths)
-+#if SHLIB_COMPAT (libc, GLIBC_2_26, GLIBC_2_27)
-+compat_symbol (libc, _hurd_exec_paths, _hurd_exec_paths, GLIBC_2_26);
-+#endif
 +extern error_t _hurd_exec_file_name (task_t task,
 +				     file_t file,
 +				     const char *filename,
