@@ -3,6 +3,8 @@ glibc (2.28-11) UNRELEASED; urgency=medium
   * debian/patches/hurd-i386/submitted-anon-mmap-shared.diff: Enable, now that
     hurd 2017 is behind.
   * control: Break old version of hurd package accordingly.
+  * debian/patches/hurd-i386/local-exec_filename.diff: Fix glibc 2.26
+    _hurd_exec_paths symbol visibility.
 
  -- Samuel Thibault <sthibault@debian.org>  Fri, 30 Aug 2019 01:30:00 +0200
 
